Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testDeployment
spec:
  replicas: 2
  selector:
    matchLabels:
      type: test
  template:
    metadata:
      labels:
        type: test
    spec:
      serviceAccountName: ingress-serviceAccount
      containers:
        - name: containerName
          image: nginx
  strategy:
    type: RollingUpdate/Recreate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
