Service.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: serviceName
spec:
  selector:
    label: podLabel
  type: NodePort /ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30000- 32767


apiVersion: v1
kind: Endpoints
metadata:
  name: my-service
subsets:
  - addresses:
      - ip: 192.0.2.42
    ports:
      - port: 9376
