Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressname
spec:
  tls:
    - hosts:
        - https-example.foo.com
      secretName: testsecret-tls
  rules:
    - host: http://wear.google.com/
      http:
        paths:
          - path: /wear
            pathType: Prefix
            backend:
              service:
                name: serviceName
                port:
                  number: 80
          - path: /watch
            pathType: Prefix
            backend:
              service:
                name: serviceName
                port:
                  number: 80
